<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:id="@+id/profileCards">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/chat_grey"
        android:padding="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <Button
                    android:id="@+id/friend_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="friend"
                    android:layout_gravity="left"
                    android:layout_weight=".5"
                    android:gravity="center" />

                <Button
                    android:id="@+id/block_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="block"
                    android:layout_gravity="right"
                    android:layout_weight=".5"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/unfriend_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="remove invite"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/unblock_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="unblock"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:gravity="center"
                android:layout_margin="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/peer_profile_photo_cardView"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                <ImageView
                    android:id="@+id/peer_profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars"
                    />
                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/peer_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/peer_profile_photo"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="Name"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/peer_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="[nothing]" />
            </TableRow>
        </TableLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>