...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".match.MatchFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_cards_rv"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <Spinner
        android:id="@+id/search_spinner"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
